# add-trailing-comma

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  README.md  add_trailing_comma.py  azure-pipelines.yml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
add_trailing_comma/: __main__.py  _ast_helpers.py  _data.py  _main.py  _token_helpers.py
add_trailing_comma/_plugins/: _with.py  calls.py  classes.py  functions.py  imports.py  literals.py  match.py  pep695.py
tests/: add_trailing_comma_test.py  main_test.py
tests/features/: align_braces_test.py  calls_test.py  classes_test.py  functions_test.py  imports_test.py  literals_test.py  match_test.py  pep695_test.py  remove_commas_test.py  unhug_test.py  with_test.py
