[metadata]
name = add_trailing_comma
version = 1.2.0
description = Automatically add trailing commas to calls and literals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/add-trailing-comma
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = add_trailing_comma
install_requires = tokenize-rt>=2.1
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    add-trailing-comma = add_trailing_comma:main

[bdist_wheel]
universal = True
