[metadata]
name = add_trailing_comma
version = 2.0.1
description = Automatically add trailing commas to calls and literals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/add-trailing-comma
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = add_trailing_comma
install_requires =
    tokenize-rt>=3.0.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    add-trailing-comma = add_trailing_comma:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
